--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,7 +10,7 @@
         android:id="@+id/backgroundView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/backgroundApp"
+        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/backgroundView"
-        app:srcCompat="@drawable/swooshlogo" />
+        app:srcCompat="@drawable/swooshlogo"
+        android:contentDescription="@string/swoosh_logo" />
 
     <TextView
         android:id="@+id/textViewGoAllIn"
@@ -40,7 +41,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/montserrat"
-        android:text="GO ALL IN"
+        android:text="@string/go_all_in"
         android:textColor="#F5EFEF"
         android:textSize="42sp"
         android:textStyle="bold"
@@ -56,7 +57,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/montserrat"
-        android:text="on going all out"
+        android:text="@string/on_going_all_out"
         android:textAllCaps="true"
         android:textColor="#F5EFEF"
         android:textSize="22sp"
@@ -72,7 +73,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="8dp"
-        android:text="Find someone in your city and dominate the league"
+        android:text="@string/find_someone_in_your_city_and_dominate_the_league"
         android:textAlignment="center"
         android:textColor="#F5EFEF"
         android:textSize="18sp"
@@ -89,7 +90,7 @@
         android:layout_marginBottom="24dp"
         android:background="@drawable/swoosh_button"
         android:fontFamily="@font/montserrat"
-        android:text="GET STARTED"
+        android:text="@string/get_started"
         android:textColor="#F5EFEF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
